--- a/darkmode.css
+++ b/darkmode.css
@@ -1,50 +1,68 @@
 QWidget
 {
-   background-color: #3f3f3f;
+   background-color: black;
+
 }
 
+
+
 QPushButton{
-    Background: #7c7c7c;
-    border: 3px solid black;
-    border-radius: 10px;
+    color: white;
+    Background: #e50616;
+    border-radius: 20px;
 }
 
 QPushButton::pressed{
-    border: 2px solid black;
-    border-radius: 7px;
-    background: #b5b5b5;
+    Background: #5b5b5b;
+    /*border: 2px solid black;*/
+    border-radius: 20px;
 
 }
 
 QLabel{
-    color: #b5b5b5;
+    color: white;
     Background: transparent;
+
 }
 
 QTabWidget{
 
-    text-decoration: underline;
+
 }
 
+
 QTabWidget::pane {
-    border-style: none;
+    /*border: 4px solid white;*/
+    border-radius: 5px;
     background: transparent;
 }
 
 
 QTabWidget::tab-bar {
-    color: white;
      alignment: center;
+
+}
+
+QTabBar::tab{
+    /*border: 2px solid white;*/
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 5px;
+    margin-top: 10px;
+
 }
 
 QTabBar::tab:selected {
+    color: white;
     background: transparent;
-    color: #b5b5b5;
+    background: #e50616;
+    border-radius: 5px;
 }
 
 QTabBar::tab:!selected {
-    color: #828181;
+    color: white;
     background: transparent;
+    border-radius: 5px;
 }
 
 QTabBar::tab::disabled{
@@ -56,36 +74,55 @@ QTabBar::tab::disabled{
 }
 
 QSpinBox{
+    color: white;
     Background: transparent;
-    color: #b5b5b5;
 }
 
 QGroupBox{
-    color: black;
+    color: white;
     margin-top: 5px;
     font-weight: bold;
-    border: 3px solid black;
+    /*border: 3px solid white;*/
     border-radius: 10px;
-    background-color: #7c7c7c;
+    background-color: #0068d0;
+
 }
 
 QGroupBox::checked{
-    border: 2px solid black;
+    background-color: #5b5b5b;
+    color: white;
     border-radius: 7px;
-    background: #b5b5b5;
 }
 
 QGroupBox::indicator{
-
+    width: 0px;
     border: none;
     background: transparent;
 }
 
 QCheckBox{
-    color: #b5b5b5;
+    color: white;
 }
 
 QCheckBox::indicator {
      width: 27px;
      height: 27px;
 }
+
+QScrollArea{
+    border: 3px solid white;
+    border-radius: 7px;
+}
+
+QListWidget{
+    border-color: white;
+}
+
+QListWidget::item{
+    background-color: red;
+}
+
+QListWidget::item::selected{
+    background-color: blue;
+}
+
