UI & BLE updates
Device list connection color indication
connect/disconnect removed/added as needed
Devicelist UI redesign

extra ball connection tab
Ball On/Off setting

--- a/UI-Resources.qrc
+++ b/UI-Resources.qrc
@@ -6,6 +6,8 @@
         <file>Chevron_down_inverted.png</file>
         <file>Chevron_Up_inverted.png</file>
         <file>settingsIcon_inverted.png</file>
+        <file>Ball_icon.png</file>
+        <file>Ball_icon_inverted.png</file>
     </qresource>
     <qresource prefix="/stylesheet">
         <file>lightmode.css</file>
