--- a/lightmode.css
+++ b/lightmode.css
@@ -115,11 +115,19 @@ QScrollArea{
 }
 
 QListWidget{
+    border: 3px solid black;
     border-color: black;
+    border-radius: 5px;
 }
 
 QListWidget::item{
-    background-color: red;
+    background-color: #e50616;
+    color: white;
+    border-radius: 5px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    margin-left: 2px;
+    margin-right: 2px;
 }
 
 QListWidget::item::selected{
