--- a/UI-Resources.qrc
+++ b/UI-Resources.qrc
@@ -8,6 +8,8 @@
         <file>settingsIcon_inverted.png</file>
         <file>Ball_icon.png</file>
         <file>Ball_icon_inverted.png</file>
+        <file>checkmark_icon.png</file>
+        <file>checkmark_icon_inverted.png</file>
     </qresource>
     <qresource prefix="/stylesheet">
         <file>lightmode.css</file>
