--- a/klingelballui.ui
+++ b/klingelballui.ui
@@ -43,7 +43,10 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>1</number>
+      </property>
+      <property name="tabBarAutoHide">
+       <bool>false</bool>
       </property>
       <widget class="QWidget" name="Sound_Tab">
        <attribute name="title">
@@ -1713,10 +1716,6 @@ QPushButton::checked{
           <property name="text">
            <string>Heller Modus</string>
           </property>
-          <property name="icon">
-           <iconset theme="applications-engineering">
-            <normaloff>.</normaloff>.</iconset>
-          </property>
           <property name="iconSize">
            <size>
             <width>20</width>
@@ -1725,6 +1724,9 @@ QPushButton::checked{
           </property>
           <property name="checked">
            <bool>true</bool>
+          </property>
+          <property name="tristate">
+           <bool>false</bool>
           </property>
          </widget>
         </item>
@@ -1738,10 +1740,6 @@ QPushButton::checked{
           </property>
           <property name="text">
            <string>Dunkler Modus</string>
-          </property>
-          <property name="icon">
-           <iconset theme="applications-engineering">
-            <normaloff>.</normaloff>.</iconset>
           </property>
           <property name="iconSize">
            <size>
