--- a/lightmode.css
+++ b/lightmode.css
@@ -143,3 +143,12 @@ QListWidget::item::selected{
     background-color: blue;
 }
 
+
+
+QRadioButton::indicator::checked{
+        border: 4px solid black;
+}
+
+QRadioButton::indicator::unchecked{
+        border: 2px solid #868686;
+}
